login page design

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,11 @@
 <div class="main">
     <div class="pal">#</div>
+    <div class="font-commons image"><img src="BankLogo.png" alt=""></div>
     <div class="title font-commons">Login to UARMS</div>
     <div class="subtitle font-commons">Welcome to user access review management system of Federal Bank</div>
+    <div class="font-commons inputs">
+        <div class="fields"><input type="text" placeholder="Enter Username" /></div>
+        <div class="fields"><input type="password" placeholder="Enter Password" /></div>
+        <div><button>Login</button></div>
+    </div>
 </div>
