--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -7,12 +7,52 @@
     font-size: 0rem;
 }
 .font-commons {
-    margin-left: 5rem;
+    margin-left: 8rem;
     color: white;
 }
 .title {
     font-weight: bold;
     font-style: normal;
     font-size: 3rem;
-    margin-top: 5rem;
+}
+.inputs {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+input {
+    width:22rem;
+    height: 2rem;
+    font-family: "Parkinsans", serif;
+    border-radius: 0.25rem;
+    border: 0;
+    padding-left: 1rem;
+}
+button {
+    width: 6.5rem;
+    height: 2rem;
+    font-family: "Parkinsans", serif;
+    border-radius: 0.25rem;
+    border: 0;
+    font-weight: bold;
+    background-color: rgb(103, 186, 255);
+}
+button:active {
+    background-color: #ffffff;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+.image {
+    margin-top: 7rem;
+}
+img {
+    width: 12rem;
+}
+input:focus {
+    outline: none;
+    border: none;
+}
+.subtitle {
+    color: rgb(152, 187, 215);
 }
