container page design

--- a/src/app/components/userhome/userhome.component.html
+++ b/src/app/components/userhome/userhome.component.html
@@ -1,1 +1,11 @@
-<p>userhome works!</p>
+<div class="main">
+    <div class="top-bar"><div>User Access Review Management System</div></div>
+    <div class="menu-bar">
+        <div class="buttonclass"><button class="menubuttons">Review Submission</button></div>
+        <div class="buttonclass"><button class="menubuttons">Pending Reviewes</button></div>
+        <div class="buttonclass"><button class="menubuttons">Archives</button></div>
+        <div class="buttonclass"><button class="menubuttons">Log Out</button></div>
+    </div>
+    <div class="content">Hai</div>
+    <div class="footer-bar">Federal Bank Limited</div>
+</div>
