--- a/src/app/components/userhome/userhome.component.html
+++ b/src/app/components/userhome/userhome.component.html
@@ -6,6 +6,6 @@
         <div class="buttonclass"><button class="menubuttons">Archives</button></div>
         <div class="buttonclass"><button class="menubuttons">Log Out</button></div>
     </div>
-    <div class="content">Hai</div>
-    <div class="footer-bar">Federal Bank Limited</div>
+    <div class="content"><router-outlet /></div>
+    <div class="footer-bar"><div>Federal Bank Limited</div></div>
 </div>
