--- a/src/app/components/userhome/userhome.component.css
+++ b/src/app/components/userhome/userhome.component.css
@@ -2,27 +2,37 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2px;
+    gap: 0.5rem;
 }
 .top-bar {
     height: 10%;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     background: rgb(75, 102, 145);
     color: white;
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 1rem;
 }
 .menu-bar {
     height: 5%;
     display: flex;
-    gap: 2px;
+    gap: 0.5rem;
     width: 100%;
 }
 .content {
     height: 80%;
+    padding: 2rem;
 }
 .footer-bar {
     height: 5%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-family: "Parkinsans", serif;
+    font-size: 0.5rem;
+    background: rgb(192, 192, 192);
 }
 .menubuttons {
     width: 100%;
@@ -30,8 +40,7 @@
     font-family: "Parkinsans", serif;
     border-radius: 0.25rem;
     border: 0.25px solid black;
-    font-weight: bold;
-    background-color: rgb(103, 186, 255);
+    background-color: rgb(192, 206, 218);
 }
 button:active {
     background-color: #ffffff;
